--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -41,6 +41,7 @@ Open `http://localhost:3000` in the browser and start building agents.
 
 ### Step 1: Launch docker containers
 ```
+cd deploy/docker
 docker compose up -d
 ```
 
