--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -14,6 +14,10 @@ cd agents
 
 ### Step 2: Configure environment variables
 
+```bash
+cp agents-manage-api/.env.example agents-manage-api/.env && cp agents-run-api/.env.example agents-run-api/.env && cp agents-manage-ui/.env.example agents-manage-ui/.env
+```
+
 Add your `ANTHROPIC_API_KEY` to an `.env` file at `/agents-run-api/`
 ```
 ANTHROPIC_API_KEY=sk-ant-xyz789
