--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -1,15 +1,125 @@
 ---
 title: MCP Servers
-description: MCP servers are used to add tools to the graph.
+description: Create MCP servers that agents can use to access external services.
 ---
 
-## How to create an MCP server
+MCP servers provide tools that your agents can use to interact with external APIs and services. Once created, these servers are automatically synced to discover available tools, which can then be added to your agent graphs.
 
-1. Go to the MCP Servers tab in the left sidebar. Then select "New MCP server".
-2. Add in a name, URL, and select the transport type. These are required fields.
-3. Optionally, you can add an image URL to the MCP tool. If this MCP server requires authentication, you can add a credential. See the [Credentials](/visual-builder/credentials) for details on how to add a credential.
-4. Click "Create server".
+## Creating an MCP server
 
-To visually add the MCP tool to the graph, see the [Graphs](/visual-builder/graphs#adding-tools) page for details.
+1. Go to the **MCP Servers** tab in the left sidebar, then select "New MCP server".
 
----
+2. Fill in the required server details:
+
+| Field | Description |
+|-------|-------------|
+| `Name` | Server name |
+| `URL` | Endpoint URL of a remote MCP server |
+| `Transport Type` | HTTP or SSE protocol |
+
+3. Optionally, configure additional settings:
+
+| Field | Description |
+|-------|-------------|
+| `Image URL` | Custom icon for the server (URL or base64 data URL) |
+| `Credential` | Authentication credential if the server requires it. Choose from existing credentials, or leave blank and add a credential later. For OAuth 2.1/PKCE flows, leave blank and use the `Click to Login` button in the server details page to authenticate |
+
+4. Click "Create" to create the server.
+
+## Viewing server details
+
+After creating an MCP server, you can view its status and available tools:
+
+1. Click on your created MCP server from the list
+2. The server details page shows:
+   - **Server information** - URL, transport type, creation date, etc.
+   - **Status** - Healthy, needs authentication, or unhealthy (shows "Click to Login" button if OAuth 2.1/PKCE flow is detected)
+   - **Active tools** - Currently enabled tools for the server
+   - **Available tools** - All tools discovered from the server with descriptions and parameters
+
+<Note>Tool discovery requires a successful connection to the MCP server. If the server shows "Click to Login" in the status, use the button to initiate the authentication process.</Note>
+
+## Editing server settings
+
+To modify an existing MCP server:
+
+1. From the server details page, click the **Edit** button
+2. The edit form shows all the same fields as creation, plus the ability to update **Active Tools**. By default, all available tools are enabled. You can select specific tools to enable.
+3. Click **Save** to apply changes
+
+## Authentication setup
+
+If your MCP server requires authentication, you have two options: either use the **"Click to Login"** button to authenticate or manually create a credential to use with the MCP server.
+
+### OAuth 2.1/PKCE authentication
+1. Create your MCP server without selecting a credential
+2. Go to the server details page and click the **"Click to Login"** button
+3. Complete the OAuth authentication flow in your browser
+4. The credential will be automatically created and saved to your keychain
+
+#### Popular MCP servers with OAuth 2.1/PKCE support
+
+| Name | URL | Docs Link |
+|------|-----|-----------|
+| Atlassian (SSE) | https://mcp.atlassian.com/v1/sse | https://developer.atlassian.com/cloud/mcp/mcp-server/ |
+| Canva | https://mcp.canva.com/mcp | https://www.canva.dev/docs/connect/canva-mcp-server-setup/ |
+| Hugging Face | https://huggingface.co/mcp?login | https://huggingface.co/mcp |
+| Intercom | https://mcp.intercom.com/mcp | https://developers.intercom.com/docs/mcp-server |
+| Linear | https://mcp.linear.app/mcp | https://linear.app/docs/mcp |
+| Neon | https://mcp.neon.tech/mcp | https://neon.com/docs/ai/neon-mcp-server |
+| Notion | https://mcp.notion.com/mcp | https://developers.notion.com/docs/get-started-with-mcp |
+| Prisma | https://mcp.prisma.io/mcp | https://www.prisma.io/docs/postgres/integrations/mcp-server#remote-mcp-server |
+| Sentry | https://mcp.sentry.dev/mcp | https://docs.sentry.io/product/sentry-mcp/ |
+| Vercel | https://mcp.vercel.com | https://vercel.com/docs/mcp/vercel-mcp |
+
+
+### Manual credential setup
+1. Create a credential in the [Credentials](/visual-builder/credentials) section. The credential can be API Key, Bearer Token, Basic, OAuth 2.0, etc.
+2. When creating or editing your MCP server, select the credential from the dropdown
+3. The credential will be automatically used when connecting to the server
+
+
+## Finding more remote MCP servers
+
+For additional remote MCP servers you can connect to:
+
+- **[Anthropic's Remote MCP Servers](https://docs.anthropic.com/en/docs/agents-and-tools/remote-mcp-servers)** - Official documentation with curated third-party remote servers
+- **[Awesome Remote MCP Servers](https://github.com/jaw9c/awesome-remote-mcp-servers)** - Community-curated list of high-quality remote MCP servers
+
+
+## Using stdio-based MCP servers
+
+Many popular MCP servers run in **stdio mode** by default. The Visual Builder requires **Streamable HTTP or SSE transport** to connect to MCP servers.
+
+### What's needed to bridge stdio → HTTP/SSE
+
+**Option 1: Use existing bridge services**
+- **`mcp-proxy`** - Community tools that wrap stdio MCP servers with Streamable HTTP
+- **Docker containers** - Pre-built images that handle the bridging automatically
+- **Cloudflare Tunnels** - Can expose local stdio servers via Streamable HTTP
+
+**Option 2: Simple Streamable HTTP wrapper**
+Create a basic Node.js server that:
+- Spawns the MCP server as a child process
+- Forwards Streamable HTTP POST requests to stdin
+- Returns stdout as Streamable HTTP responses
+
+### Setup outline
+
+1. **Deploy your bridge** (locally or cloud)
+2. **Set environment variables** (API tokens, etc.)  
+3. **Verify it's running** (i.e. on port `4000`, `4001`, etc.)
+4. **Add to Visual Builder**:
+   - **URL**: `http://localhost:4000/mcp` (or your server URL)
+   - **Transport Type**: `HTTP` or `SSE`
+
+## Adding servers to graphs
+
+Once you have created an MCP server, you can add it to your graphs:
+
+1. Go to the [Graphs](/visual-builder/graphs) page
+2. Drag and drop an MCP server into your graph
+3. Connect the MCP server to an agent by dragging from the server's connector to the agent
+4. Your agent can now use the tools provided by that MCP server
+
+For detailed instructions on working with MCP servers in graphs, see the [Graphs](/visual-builder/graphs#adding-tools) page.
