--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -43,7 +43,7 @@ Open `http://localhost:3000` in the browser and start building agents.
 
 # Push your first graph
 
-One of the benefits of the Inkeep agent framework is that you can define your agents in code and then push them to the visual builder and pick back up where you left off to buid your agents visually.
+A key advantage of the Inkeep agent framework is its seamless code-to-visual workflow: define your agents programmatically, push them to the visual builder, and continue developing with the intuitive drag-and-drop interface.
 
 Follow the steps below to push your first graph using the [Inkeep CLI](/typescript-sdk/cli-reference).
 
