--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -57,7 +57,7 @@ npm install -g @inkeep/agents-cli
 
 ```bash
 cd examples
-inkeep push ./basic.graph.ts
+inkeep push basic.graph.ts
 ```
 
 <Note>The graph will be pushed to whichever project is specified in the `/examples/inkeep.config.ts` file, which is set to the `default` project by default. Feel free to change it to your own project.</Note>
