update types and docs

--- a/agents-docs/content/docs/typescript-sdk/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials.mdx
@@ -20,10 +20,11 @@ Now that you have a credential reference id, you can reference it when creating 
 ```typescript
 import { mcpTool } from "agent-sdk";
 import { credential } from "agent-sdk";
+import { CredentialStoreType } from "agent-sdk";
 
 const inkeepApiKeyCredential = credential({
   id: 'inkeep-api-key',
-  type: 'memory',
+  type: CredentialStoreType.memory,
   credentialStoreId: 'memory-default',
   retrievalParams: {
     key: 'INKEEP_API_KEY',
@@ -39,9 +40,8 @@ const inkeepAnalyticsTool = mcpTool({
   serverUrl:
     "https://analytics.inkeep.com/mcp",
   credentialReference: inkeepApiKeyCredential, // Reference to stored credentials
-  mcpType: "generic",
   transport: {
-    type: "streamable_http",
+    type: MCPTransportType.streamableHttp
   },
 });
 ```
