--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -123,7 +123,7 @@ The Visual Builder requires **Streamable HTTP or SSE transport** to connect to M
 
 ### Example using `mcp-proxy`
 
-1. Get familiar with [mcp-proxy](https://github.com/punkpeye/mcp-proxy) - proxy for MCP servers that use stdio transport
+1. Get familiar with [mcp-proxy](https://github.com/sparfenyuk/mcp-proxy) - proxy for MCP servers that use stdio transport
 2. [Supabase MCP server](https://github.com/supabase-community/supabase-mcp)
 3. Run the server locally:
 ```bash
