moved auth to api reference

--- a/agents-docs/content/docs/api-reference/authentication/run-api.mdx
+++ b/agents-docs/content/docs/api-reference/authentication/run-api.mdx
@@ -1,6 +1,6 @@
 ---
-title: Authentication
-description: Authentication modes for Management and Run APIs
+title: Run API Authentication
+description: Authentication modes for Run API
 ---
 
 The Run API (`agents-run-api`) has three authentication modes depending on your environment configuration:
@@ -73,3 +73,4 @@ PORT=3004 pnpm dev
 2. **Bypass Secret**: Use for internal services only
 3. **API Keys**: Rotate regularly and set expiration dates
 4. **Headers**: Use HTTPS to protect header values in transit
+
