--- a/agents-docs/content/docs/typescript-sdk/spans.mdx
+++ b/agents-docs/content/docs/typescript-sdk/spans.mdx
@@ -170,7 +170,7 @@ return tracer.startActiveSpan('agent.generate', {
 Spans provide powerful observability into your Inkeep Agent Framework operations. By following these patterns:
 
 1. **Use `getTracer()`** for consistent tracing
-2. **Use consistent naming** with hierarchical structure
+2. **Use consistent naming**
 3. **Set meaningful attributes** for searchability
 4. **Handle errors properly** with status and exceptions
 5. **Use `startActiveSpan`** for automatic lifecycle management
